--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="/assets/rock.png" alt="rock">
+            <img src="assets/rock.png" alt="rock">
         </div>
         <div class="choice" id="paper">
             <img src="assets/paper.png" alt="paper">
